tests/suites/scctests/cc/error/0029-eof.c
/*
PATTERN:
0029-eof.c:8: error: unexpected '<EOF>'
.
*/

int
main(
